--- a/i18n/zh-CN/color.json
+++ b/i18n/zh-CN/color.json
@@ -9,7 +9,7 @@
     "customFormat": "自定义格式",
     "export": "导出",
     "exportedPreset": "成功导出预设到剪贴板！",
-    "exportedPresetUrl": "Successfully exported preset to url!",
+    "exportedPresetUrl": "成功将预设导出至 url！",
     "formatCharacter": "格式字符",
     "formatting": "格式",
     "hexColor": "十六进制颜色",
