--- a/i18n/zh-CN/nav.json
+++ b/i18n/zh-CN/nav.json
@@ -8,12 +8,12 @@
     "gradients": "渐变",
     "hexGradient": "十六进制渐变",
     "misc": "其他",
-    "more": "More Resources",
+    "more": "更多资源",
     "paperTimings": "Paper计时",
     "presetTools": "预设工具",
     "privacyPolicy": "隐私政策",
     "sparkProfile": "Spark分析",
-    "tabAnimationPreview": "TAB Animation Previewer",
+    "tabAnimationPreview": "TAB动画预览器",
     "tabAnimationPreviewer": "TAB动画预览器"
   }
 }
